[project]
name = "tonconnect"
description = "TON Connect - Python library for using TON Connect 2."
long_description = file: README.md
long_description_content_type = text/markdown
version = "0.0.3"
authors = [
    {name = "Vlad100"}
]
dependencies = [
    "pynacl",
    "requests",
    "tonsdk"
]

[project.urls]
Homepage = "https://github.com/ClickoTON-Foundation/tonconnect"
Documentation = "https://github.com/ClickoTON-Foundation/tonconnect"
Repository = "https://github.com/ClickoTON-Foundation/tonconnect/"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
