[project]
name = "tonconnect"
description = "TON Connect - Python library for using TON Connect 2."
readme = "README.md"
version = "0.1.0"
authors = [
    {name = "Vlad100"}
]
dependencies = [
    "pynacl",
    "requests",
    "tonsdk",
    "aiohttp"
]

[project.urls]
Homepage = "https://github.com/ClickoTON-Foundation/tonconnect"
Documentation = "https://github.com/ClickoTON-Foundation/tonconnect"
Repository = "https://github.com/ClickoTON-Foundation/tonconnect/"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
